// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Browser instance 1`] = `
<Browser
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  home="about:blank"
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  notooltips={false}
  obj="Browser"
  onClip={[Function]}
  onOpen={[Function]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  uri="http://example.com"
  useparser={false}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test creation of a Browser instance with empty uri values 1`] = `
<Browser
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  home=""
  id={null}
  left={null}
  location="none"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  notooltips={false}
  obj="Browser"
  onClip={[Function]}
  onOpen={[Function]}
  padding={null}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  uri=""
  useparser={false}
  visible={true}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of the Browser props object 1`] = `
Object {
  "backgroundColor": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "home": "about:blank",
  "id": null,
  "left": null,
  "location": "none",
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "notooltip": false,
  "notooltips": false,
  "obj": "Browser",
  "onClip": [Function],
  "onOpen": [Function],
  "padding": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "uri": "about:blank",
  "useparser": false,
  "visible": true,
  "width": null,
  "xcss": null,
}
`;
